[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Sprites/Scythe_Icon.png" type="Texture" id=1]
[ext_resource path="res://Interface/Shop/shop_item.gd" type="Script" id=2]
[ext_resource path="res://Interface/Fonts/dogicapixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interface/Shop/selected.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_bottom = 1
font_data = ExtResource( 3 )

[node name="shop_item" type="TextureButton"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
disabled = true
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="price" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -7.0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "00"
valign = 2

[node name="selected" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
offset = Vector2( -1, -1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="focus_entered" from="." to="." method="_on_shop_item_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_shop_item_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_shop_item_focus_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_shop_item_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_shop_item_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
